# ordered-set

./: .codecov.yml  .coveragerc  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Jenkinsfile  MANIFEST.in  MIT-LICENSE  PKGBUILD  README  README.md  ordered_set.py  ordered_set.pyi  ordered_set_adapter.py  ordered_set_adapter_test.py  ordered_set_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  test.py  tox.ini
benchmarks/: ordered_set_benchmark.py
ordered_set/: __init__.py
ordered_set/test/: __init__.py  _test_mypy.py  _test_ordered_set_all.py  test_ordered_set_1.py  test_ordered_set_2.py  test_ordered_set_3.py
test/: test_ordered_set.py
