[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ordered-set"
authors = [{name = "Elia Robyn Lake", email = "gh@arborelia.net"}]
readme = "README.md"
license = {file = "MIT-LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "description"]
requires-python = ">=3.7"

[tool.flit.module]
name = "ordered_set"

[project.urls]
Home = "https://github.com/rspeer/ordered-set"

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
